Include Open Graph Image
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jesusgraterol.dev/" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="" /> <!-- @TODO -->
-    <meta property="og:image:secure_url" content="" /> <!-- @TODO -->
+    <meta property="og:image" content="https://jesusgraterol.dev/og.png" />
+    <meta property="og:image:secure_url" content="https://jesusgraterol.dev/og.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="Social cover about Jesus Graterol" />
 
