Update profession name and include new og:image file
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 
     <!-- General Information Tags -->
-    <title>Jesus Graterol | Full-Stack Web Developer</title>
-    <meta name="description" content="Jesus Graterol is a Full-Stack Web Developer with experience in building scalable web applications and REST-based APIs.">
+    <title>Jesus Graterol | Web Developer</title>
+    <meta name="description" content="Jesus Graterol is a Web Developer with experience in building scalable web applications and REST-based APIs.">
     <meta name="keywords" content="react, nodejs, javascript, front-end, back-end, full-stack, typescript, web-development, postgresql">
     <meta name="author" content="Jesus Graterol">
 
@@ -22,7 +22,7 @@
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Jesus Graterol | Full-Stack Web Developer" />
     <meta property="og:site_name" content="Jesus Graterol" />
-    <meta property="og:description" content="Jesus Graterol is a Full-Stack Web Developer with experience in building scalable web applications and REST-based APIs." />
+    <meta property="og:description" content="Jesus Graterol is a Web Developer with experience in building scalable web applications and REST-based APIs." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jesusgraterol.dev/" />
     <meta property="og:locale" content="en_US" />
