Update app description
Signed-off-by: Jesus Graterol <jesusgraterol.dev@protonmail.com>

--- a/index.html
+++ b/index.html
@@ -1,96 +1,102 @@
 <!doctype html>
 <html lang="en" translate="no">
-  <head>
-	  <!-- Charset -->
-    <meta charset="UTF-8" />
+
+<head>
+  <!-- Charset -->
+  <meta charset="UTF-8" />
 
 
 
-    <!-- Viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Viewport -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
 
-    <!-- General Information Tags -->
-    <title>Jesus Graterol | Web Developer</title>
-    <meta name="description" content="Jesus Graterol is a Web Developer with experience in building scalable web applications and REST-based APIs.">
-    <meta name="keywords" content="react, nodejs, javascript, front-end, back-end, full-stack, typescript, web-development, postgresql">
-    <meta name="author" content="Jesus Graterol">
+  <!-- General Information Tags -->
+  <title>Jesus Graterol | Web Developer</title>
+  <meta name="description"
+    content="Jesus Graterol is a Web Developer specializing in scalable, high-performance solutions, including web apps, RESTful APIs, and database architectures.">
+  <meta name="keywords"
+    content="react, nodejs, javascript, front-end, back-end, full-stack, typescript, web-development, postgresql">
+  <meta name="author" content="Jesus Graterol">
 
 
 
-    <!-- Open Graph Tags -->
-    <meta property="og:title" content="Jesus Graterol | Full-Stack Web Developer" />
-    <meta property="og:site_name" content="Jesus Graterol" />
-    <meta property="og:description" content="Jesus Graterol is a Web Developer with experience in building scalable web applications and REST-based APIs." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://jesusgraterol.dev/" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://jesusgraterol.dev/og.png" />
-    <meta property="og:image:secure_url" content="https://jesusgraterol.dev/og.png" />
-    <meta property="og:image:type" content="image/png" />
-    <meta property="og:image:alt" content="Social cover about Jesus Graterol" />
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="Jesus Graterol | Full-Stack Web Developer" />
+  <meta property="og:site_name" content="Jesus Graterol" />
+  <meta property="og:description"
+    content="Jesus Graterol is a Web Developer specializing in scalable, high-performance solutions, including web apps, RESTful APIs, and database architectures." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jesusgraterol.dev/" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:image" content="https://jesusgraterol.dev/og.png" />
+  <meta property="og:image:secure_url" content="https://jesusgraterol.dev/og.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:alt" content="Social cover about Jesus Graterol" />
 
 
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="512x512" href="favicons/512x512.png">
-    <link rel="icon" type="image/png" sizes="384x384" href="favicons/384x384.png">
-    <link rel="icon" type="image/png" sizes="256x256" href="favicons/256x256.png">
-    <link rel="icon" type="image/png" sizes="240x240" href="favicons/240x240.png">
-    <link rel="icon" type="image/png" sizes="224x224" href="favicons/224x224.png">
-    <link rel="icon" type="image/png" sizes="208x208" href="favicons/208x208.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="favicons/192x192.png">
-    <link rel="icon" type="image/png" sizes="176x176" href="favicons/176x176.png">
-    <link rel="icon" type="image/png" sizes="160x160" href="favicons/160x160.png">
-    <link rel="icon" type="image/png" sizes="144x144" href="favicons/144x144.png">
-    <link rel="icon" type="image/png" sizes="128x128" href="favicons/128x128.png">
-    <link rel="icon" type="image/png" sizes="112x112" href="favicons/112x112.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicons/96x96.png">
-    <link rel="icon" type="image/png" sizes="64x64" href="favicons/64x64.png">
-    <link rel="icon" type="image/png" sizes="48x48" href="favicons/48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/16x16.png">
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" sizes="512x512" href="favicons/512x512.png">
+  <link rel="icon" type="image/png" sizes="384x384" href="favicons/384x384.png">
+  <link rel="icon" type="image/png" sizes="256x256" href="favicons/256x256.png">
+  <link rel="icon" type="image/png" sizes="240x240" href="favicons/240x240.png">
+  <link rel="icon" type="image/png" sizes="224x224" href="favicons/224x224.png">
+  <link rel="icon" type="image/png" sizes="208x208" href="favicons/208x208.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicons/192x192.png">
+  <link rel="icon" type="image/png" sizes="176x176" href="favicons/176x176.png">
+  <link rel="icon" type="image/png" sizes="160x160" href="favicons/160x160.png">
+  <link rel="icon" type="image/png" sizes="144x144" href="favicons/144x144.png">
+  <link rel="icon" type="image/png" sizes="128x128" href="favicons/128x128.png">
+  <link rel="icon" type="image/png" sizes="112x112" href="favicons/112x112.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicons/96x96.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="favicons/64x64.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="favicons/48x48.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/16x16.png">
 
 
 
-    <!-- Theme Color -->
-    <meta name="theme-color" content="#0C0C0C">
+  <!-- Theme Color -->
+  <meta name="theme-color" content="#0C0C0C">
 
 
 
-		<!-- Fallback Application Metadata for Legacy Browsers -->
-		<meta name="application-name" content="Epoca">
+  <!-- Fallback Application Metadata for Legacy Browsers -->
+  <meta name="application-name" content="Epoca">
 
 
 
-		<!-- Run in Standalone Mode without the Browser Interface -->
-		<meta name="mobile-web-app-capable" content="yes">
+  <!-- Run in Standalone Mode without the Browser Interface -->
+  <meta name="mobile-web-app-capable" content="yes">
 
 
 
-		<!-- Apple Tags -->
+  <!-- Apple Tags -->
 
-		<!-- Run the App in Fullscreen Without the Browser Interface -->
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-touch-fullscreen" content="yes">
-		
-		<!-- Application Title under the PWA Icon on the user's home screen -->
-		<meta name="apple-mobile-web-app-title" content="Jesus Graterol" />
-		
-		<!-- Status Bar Color "default"|"black"|"black-translucent"|"white" -->
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <!-- Run the App in Fullscreen Without the Browser Interface -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-touch-fullscreen" content="yes">
+
+  <!-- Application Title under the PWA Icon on the user's home screen -->
+  <meta name="apple-mobile-web-app-title" content="Jesus Graterol" />
+
+  <!-- Status Bar Color "default"|"black"|"black-translucent"|"white" -->
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 
 
-		<!-- Microsoft Tags -->
+  <!-- Microsoft Tags -->
 
-		<!-- Support for older versions of IE -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <!-- Support for older versions of IE -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
